sombras en el portafolio

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,8 @@ section h2 {
     width: 31%;
     margin: 1%;
     background-color: white;
+    -webkit-box-shadow:1px 1px 4px 2px rgba(48,48,48,0.3);
+    box-shadow:1px 1px 4px 2px rgba(48,48,48,0.3);
 }
 
 #portafolio .box img {
